<?xml version="1.0"?>
<package format="3">
  <name>traversability_mapping</name>
  <version>0.0.0</version>
  <description>Traversability Mapping</description>

  <maintainer email="tshan3@stevens.edu">Tixiao Shan</maintainer>

  <license>TODO</license>

  <author>Tixiao Shan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>cv_bridge</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav2_core</depend>
  <depend>elevation_msgs</depend>

  <depend>image_transport</depend>

  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
  </export>
  
</package>
